# claude_bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  Makefile  README.md  ai-steward.service  bot.py  claude-bot.service  pyproject.toml  requirements.txt  users.json.example
configs/: claude-settings.json
docs/: 2026-03-15-skills-file-convention-architecture.md  DEPLOYMENT.md  ROADMAP.md  USAGE.md
docs/adr/: 001-aiogram.md  002-claude-code-cli.md  003-faster-whisper.md  004-edge-tts.md  005-tesseract.md  006-modular-architecture.md  007-pydantic-settings.md  008-uv.md  009-observability.md  010-exception-hierarchy.md  ADR-011-unified-plan-item-model.md  README.md
docs/backlog/: TASK-001-notification-module.md  TASK-002-planning-tracker.md  TASK-003-video-download.md  TASK-004-claude-md-hierarchy.md
docs/plans/: PLAN-001-notification-module.md  PLAN-002-planning-tracker.md  PLAN-003-video-download.md  PLAN-rename-to-aisteward.md
docs/prd/: 2026-03-10_observability-and-github-workflow.md  2026-03-10_skills-libraries-for-message-processing.md
docs/reports/: 2026-03-15-quality-cascade-alignment.md  2026-03-16-notification-module.md  2026-03-17-planning-tracker.md  2026-03-23-claude-md-hierarchy.md
docs/requirements/: REQ-002-planning-tracker.md  REQ-004-claude-md-hierarchy.md
scripts/: backup.sh  healthcheck.sh  setup-local.sh  setup-security.sh  setup-server.sh  update.sh
src/ai_steward/: __init__.py  __main__.py  bot.py  errors.py  keyboards.py  (+1 more)
templates/: README.md
tests/: __init__.py  test_ai_manager.py  test_settings.py
(+72 files in other folders)
